<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectionNamesActivity"
    android:background="@drawable/bg1"
    android:id="@+id/constraint">


    <TextView
        android:id="@+id/txt_agenda"
        android:layout_width="268dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:hint="@string/Agenda"
        android:textColorHint="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/agenda1"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:layout_marginTop="76dp"
        android:background="@color/white"
        android:hint="@string/Agenda1"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_agenda" />

    <EditText
        android:id="@+id/agenda2"
        android:layout_width="368dp"
        android:inputType="text"
        android:layout_height="46dp"
        android:background="@color/white"
        android:hint="@string/Agenda2"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agenda1"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteY="209dp" />


    <EditText
        android:id="@+id/agenda3"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:background="@color/white"
        android:textColorHint="@color/black"
        android:hint="@string/Agend3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agenda2"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteY="283dp" />

    <EditText
        android:id="@+id/agenda4"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:background="@color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/Agend4"
        android:textColorHint="@color/black"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agenda3"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:inputType="text"
        android:id="@+id/agenda5"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:background="@color/white"
        android:hint="@string/Agenda5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="433dp"
        app:layout_constraintTop_toBottomOf="@id/agenda4"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/Submit1"
        android:layout_width="259dp"
        android:layout_height="54dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/btn6"
        android:hint="@string/done"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>