<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/bg1">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="405dp"
        android:layout_height="93dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="403dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/candidate_Fathers_Name"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="24dp"
            android:hint="@string/fathername"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/persona_detail">

        </EditText>

        <EditText
            android:id="@+id/candidate_mothers_name"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/mothernamde"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candidate_Fathers_Name"></EditText>

        <EditText
            android:id="@+id/candidate_Spouse_Name"
            android:layout_width="387dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/spousename"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/candidate_mothers_name"></EditText>

        <EditText
            android:id="@+id/candidates_education_qualification"
            android:layout_width="387dp"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/education"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/candidate_Spouse_Name"></EditText>

        <EditText
            android:id="@+id/candidate_hobbies"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hobbies"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/candidates_education_qualification"></EditText>

        <EditText
            android:id="@+id/candidate_networth"
            android:layout_width="387dp"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/networth"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516"></EditText>

    </LinearLayout>

    <Button
        android:id="@+id/Submit2"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn5"
        android:hint="@string/done"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/persona_detail"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="@string/personaldetail"
        android:textColorHint="#000000"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>