<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectionSelectionActivity"
    android:background="@drawable/bg1">

    <GridLayout
        android:id="@+id/candidate_political_background_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="4"
        android:rowCount="3"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="10dp"
         android:hint="@string/srno"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"

            android:padding="10dp"
           android:hint="@string/electiontype"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:padding="10dp"
              android:textColorHint="@color/black"
            android:hint="@string/result"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:padding="10dp"
            android:hint="@string/result"
            android:textColorHint="@color/black"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_row="1"
            android:layout_column="0"
            android:textColor="@color/black"
            android:hint="1"
            android:padding="10dp"
            android:textColorHint="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_row="1"
            android:layout_column="1"
            android:padding="10dp"
            android:textColorHint="@android:color/black" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_row="1"
            android:layout_column="2"
            android:padding="10dp"
            android:textColorHint="@android:color/black" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>