<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint"
    android:background="@drawable/bg1">


    <TextView
        android:id="@+id/candidate_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraint"
        android:layout_width="253dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/candidateprofile"
        android:textColorHint="#000000"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="37dp"
        app:layout_constraintTop_toBottomOf="@id/candidate_profile"/>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <EditText
            android:id="@+id/candidate_Name"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/candidate_profile" />

        <EditText
            android:id="@+id/candidate_Age"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"

            android:hint="@string/age"
            android:inputType="number"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/candidate_Name" />

        <EditText
            android:id="@+id/candidate_Gender"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/gender"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="@id/candidate_Age"
            app:layout_constraintTop_toBottomOf="@id/candidate_Age" />

        <EditText
            android:id="@+id/Political_Party"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/politicalparty"
            android:inputType="text"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/candidate_Gender"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464" />

        <EditText
            android:layout_margin="5dp"
            android:id="@+id/Political_Experience"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:hint="@string/politicalexperience"
            android:inputType="number"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintTop_toBottomOf="@id/Political_Party" />


    </LinearLayout>


    <Spinner
        android:id="@+id/Election_Type"
        android:layout_width="373dp"
        android:layout_height="47dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="140dp"
        android:layout_height="46dp"

        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn6"
        android:text="SUBMIT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Election_Type" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="90dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="624dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


            </LinearLayout>

            <ImageView
                android:id="@+id/Profile"
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:src="@drawable/profile3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />


            <ImageView
                android:id="@+id/Political_background_history"
                android:layout_width="148dp"
                android:layout_height="120dp"

                android:src="@drawable/politicalparty" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"

                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"

                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/agenda"
                    android:layout_width="124dp"
                    android:layout_height="111dp"

                    android:src="@drawable/chunnaimudde" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>