<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg1"
    android:id="@+id/constraint1">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        >

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="382dp"
        android:layout_height="237dp"
        android:layout_marginEnd="32dp"

        android:layout_marginRight="32dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="359dp">

        <EditText
            android:id="@+id/et2_serial_no"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/bg2"
            android:hint="@string/serialno"
            android:inputType="number"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayout2"
            tools:layout_editor_absoluteY="6dp" />

        <EditText
            android:id="@+id/et2_election_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/electiontype"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="49dp" />

        <EditText
            android:id="@+id/et2_con"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/constituency"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="93dp" />

        <EditText
            android:id="@+id/et2_year"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/year"
            android:inputType="number"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="137dp" />

        <EditText
            android:id="@+id/et2_result"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/result"
            android:inputType="text"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="181dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="383dp"
        android:layout_height="250dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="439dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText

            android:id="@+id/et1_serial_no"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/serialno"
            android:inputType="number"
            android:textColorHint="@color/black"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="4dp" />

        <EditText
            android:id="@+id/et1_election_type"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg2"
            android:hint="@string/electiontype"
            android:inputType="text"
            android:paddingTop="5dp"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/et1_con"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et1_serial_no" />

        <EditText
            android:id="@+id/et1_con"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/constituency"
            android:inputType="text"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et1_year"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/year"
            android:inputType="number"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="149dp" />

        <EditText
            android:id="@+id/et1_result"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg2"
            android:hint="@string/result"
            android:inputType="text"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.989" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="34dp"
        android:gravity="center_horizontal"
        android:hint="@string/Politicalview"
        android:textColorHint="@color/black"
        android:textSize="29dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="61dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_add"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="633dp"

        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>